--- a/pyiqa/archs/class_mapping.json
+++ b/pyiqa/archs/class_mapping.json
@@ -42,19 +42,19 @@
     "MANIQA": "maniqa_arch",
     "SwinTransformer": "maniqa_arch",
     "TABlock": "maniqa_arch",
-    "DTCWTForward": "zzknet_svt_arch",
-    "DTCWTInverse": "zzknet_svt_arch",
-    "FaceRestoreHelper": "zzknet_svt_arch",
-    "GatedConv": "zzknet_svt_arch",
-    "SAMFeatureExtractor": "zzknet_svt_arch",
-    "SCAModule": "scfa_scanet_arch",
-    "SVTFusionModule": "scfa_arch",
+    "DTCWTForward": "Scnet2_arch",
+    "DTCWTInverse": "Scnet2_arch",
+    "FaceRestoreHelper": "Scnet2_arch",
+    "GatedConv": "Scnet2_arch",
+    "SAMFeatureExtractor": "Scnet2_arch",
+    "SCAModule": "Scnet2_arch",
+    "SVTFusionModule": "Scnet2_arch",
     "SVTSCNet": "scfa_scanet_arch",
-    "SVT_channel_mixing": "zzknet_svt_arch",
-    "TransformerDecoder": "zzknet_svt_arch",
-    "TransformerDecoderLayer": "zzknet_svt_arch",
-    "TransformerEncoder": "zzknet_svt_arch",
-    "TransformerEncoderLayer": "zzknet_svt_arch",
+    "SVT_channel_mixing": "Scnet2_arch",
+    "TransformerDecoder": "Scnet2_arch",
+    "TransformerDecoderLayer": "Scnet2_arch",
+    "TransformerEncoder": "Scnet2_arch",
+    "TransformerEncoderLayer": "Scnet2_arch",
     "AdaptiveConcatPool2d": "paq2piq_arch",
     "PAQ2PIQ": "paq2piq_arch",
     "RoIPool": "paq2piq_arch",
@@ -88,6 +88,9 @@
     "Tensor": "nrqm_arch",
     "CLIPScore": "clipscore_arch",
     "DISTS": "dists_arch",
+    "SCNet": "Scnet2_arch",
+    "SCNetLite": "Scnet_arch",
+    "SKConvNoFC": "Scnet2_arch",
     "CW_SSIM": "ssim_arch",
     "MS_SSIM": "ssim_arch",
     "SCFpyr_PyTorch": "nrqm_arch",
@@ -95,8 +98,11 @@
     "NIMA": "nima_arch",
     "InceptionScore": "inceptionscore_arch",
     "SVTNet": "scfa_arch",
+    "RCANLite": "RCANet_arch",
+    "SCFAKTNet": "scfakt_arch",
     "LIQE": "liqe_arch",
     "product": "liqe_arch",
+    "waferNet": "wafernet_conv_arch",
     "HyperNet": "hypernet_arch",
     "ZZKNet_svt": "zzknet_svt_arch",
     "BasicBlock": "ckdn_arch",
@@ -107,6 +113,10 @@
     "LAIONAes": "laion_aes_arch",
     "MLP": "laion_aes_arch",
     "PSNR": "psnr_arch",
+    "SCBottleneck": "Scnet2_arch",
+    "SCConv": "Scnet2_arch",
+    "SCNet2": "Scnet2_arch",
+    "SCNetLite2": "Scnet2_arch",
     "VIF": "vif_arch",
     "MAD": "mad_arch",
     "ARNIQA": "arniqa_arch",
