--- a/options/train/TOPIQ/train_TOPIQ_SCNetLite2_res50_koniq.yml
+++ b/options/train/TOPIQ/train_TOPIQ_SCNetLite2_res50_koniq.yml
@@ -1,15 +1,13 @@
-name: baseline_SVTSCNet_Res50_koniq
+name: baseline_SCBottleneckAttn_Res50_koniq
 # name: debug_model
 model_type: GeneralIQAModel
 num_gpu: 4  # set num_gpu: 0 for cpu mode
-manual_seed: 123 
+manual_seed: 123
 
 define: &img_size_oneside 384 
 define: &img_size [*img_size_oneside, *img_size_oneside]
-
 define: &backbone resnet50
-
-define: &train_batch_size 16
+define: &train_batch_size 8
 define: &test_batch_size 4
 
 # dataset and data loader settings
@@ -46,7 +44,7 @@ datasets:
 
 # network structures
 network:
-  type: SVTSCNet
+  type: SCNetLite2
   use_ref: false
   pretrained: false
   num_crop: 1 
