--- a/options/train/TOPIQ/train_TOPIQ_Wafernet_res50_wafer.yml
+++ b/options/train/TOPIQ/train_TOPIQ_Wafernet_res50_wafer.yml
@@ -1,6 +1,6 @@
-name: baseline_SVTSCNet_Res50_koniq
+name: baseline_WaferNet_Res50_wafer
 # name: debug_model
-model_type: GeneralIQAModel
+model_type: waferIQAModel
 num_gpu: 4  # set num_gpu: 0 for cpu mode
 manual_seed: 123 
 
@@ -9,17 +9,18 @@ define: &img_size [*img_size_oneside, *img_size_oneside]
 
 define: &backbone resnet50
 
-define: &train_batch_size 16
+define: &train_batch_size 8
 define: &test_batch_size 4
 
 # dataset and data loader settings
 datasets:
   train:
     name: koniq10k
-    type: GeneralNRDataset
-    dataroot_target: /data1/zengzk/wafer_IQA/wafer_2024/datasets/koniq10k//512x384
-    meta_info_file: /data1/zengzk/wafer_IQA/wafer_2024/datasets/meta_info//meta_info_KonIQ10kDataset.csv
-    split_file: /data1/zengzk/wafer_IQA/wafer_2024/datasets/meta_info//koniq10k_official.pkl
+    type: waferNRDataset
+    dataroot_target: /data1/zengzk/wafer_IQA/wafer_2024/datasets/wafer/512*384
+    meta_info_file: /data1/zengzk/wafer_IQA/wafer_2024/datasets/meta_info/meta_info_waferDataset.csv
+    split_file: /data1/zengzk/wafer_IQA/wafer_2024/datasets/meta_info/wafer_official.pkl
+    text_meta_file: /data1/zengzk/wafer_IQA/wafer_2024/datasets/meta_info/wafer_indicators.csv
     mos_range: [0, 100]
     lower_better: false 
     mos_normalize: true
@@ -39,14 +40,14 @@ datasets:
 
   val:
     name: koniq10k
-    type: GeneralNRDataset
-    dataroot_target: /data1/zengzk/wafer_IQA/wafer_2024/datasets/koniq10k/512x384
-    meta_info_file: /data1/zengzk/wafer_IQA/wafer_2024/datasets/meta_info/meta_info_KonIQ10kDataset.csv
-    split_file: /data1/zengzk/wafer_IQA/wafer_2024/datasets/meta_info/koniq10k_official.pkl
-
+    type: waferNRDataset
+    dataroot_target: /data1/zengzk/wafer_IQA/wafer_2024/datasets/wafer/512*384
+    meta_info_file: /data1/zengzk/wafer_IQA/wafer_2024/datasets/meta_info/meta_info_waferDataset.csv
+    split_file: /data1/zengzk/wafer_IQA/wafer_2024/datasets/meta_info/wafer_official.pkl
+    text_meta_file: /data1/zengzk/wafer_IQA/wafer_2024/datasets/meta_info/wafer_indicators.csv
 # network structures
 network:
-  type: SVTSCNet
+  type: waferNet
   use_ref: false
   pretrained: false
   num_crop: 1 
