--- a/options/train/WaDIQaM/train_WaDIQaM_NR_wafer.yml
+++ b/options/train/WaDIQaM/train_WaDIQaM_NR_wafer.yml
@@ -1,16 +1,8 @@
-name: baseline_SVTSCNet_Res50_wafer
-# name: debug_model
-model_type: GeneralIQAModel
-num_gpu: 4  # set num_gpu: 0 for cpu mode
-manual_seed: 123 
-
-define: &img_size_oneside 384 
-define: &img_size [*img_size_oneside, *img_size_oneside]
-
-define: &backbone resnet50
-
-define: &train_batch_size 16
-define: &test_batch_size 4
+# general settings
+name: 005_WaDIQaM_NR_wafer
+model_type: WaDIQaMModel
+num_gpu: 1  # set num_gpu: 0 for cpu mode
+manual_seed: 123
 
 # dataset and data loader settings
 datasets:
@@ -23,19 +15,14 @@ datasets:
     mos_range: [0, 100]
     lower_better: false 
     mos_normalize: true
-
-    augment:
-      hflip: true
-      random_crop: *img_size_oneside 
-    img_range: 1
-
+    
     # data loader
     use_shuffle: true
-    num_worker_per_gpu: 8
-    batch_size_per_gpu: *train_batch_size
+    num_worker_per_gpu: 4
+    batch_size_per_gpu: 8
     dataset_enlarge_ratio: 1
     prefetch_mode: cpu
-    num_prefetch_queue: 64
+    num_prefetch_queue: 128
 
   val:
     name: koniq10k
@@ -43,69 +30,69 @@ datasets:
     dataroot_target: /data1/zengzk/wafer_IQA/wafer_2024/datasets/wafer/512*384
     meta_info_file: /data1/zengzk/wafer_IQA/wafer_2024/datasets/meta_info/meta_info_waferDataset.csv
     split_file: /data1/zengzk/wafer_IQA/wafer_2024/datasets/meta_info/wafer_official.pkl
+    mos_range: [0, 100]
+    lower_better: false 
+    mos_normalize: true
+        
+    num_worker_per_gpu: 4
+    batch_size_per_gpu: 8
+
 # network structures
 network:
-  type: SVTSCNet
-  use_ref: false
-  pretrained: false
-  num_crop: 1 
-  num_attn_layers: 1
-  crop_size: *img_size
-  semantic_model_name: *backbone
-  block_pool: weighted_avg
+  type: WaDIQaM
+  metric_type: NR
+  pretrained_model_path: ~
+  load_feature_weight_only: True
 
 # path
 path:
+  pretrain_network_g: ~
   strict_load_g: true
   resume_state: ~
 
 # training settings
 train:
   optim:
-    type: AdamW
-    lr: !!float 3e-5 
-    weight_decay: !!float 1e-5
-  
-  scheduler:
-    type: CosineAnnealingLR
-    T_max: 100
-    eta_min: 0 
-    # type: StepLR 
-    # step_size: !!float 1e9
-    # gamma: 1.0 
+    type: Adam
+    lr_basemodel: !!float 1e-4
+    lr_fc_layers: !!float 1e-4
+    lr: !!float 1e-4
 
-  total_iter: 10000
-  total_epoch: 100
+  scheduler:
+    type: MultiStepLR
+    milestones: [400, 800, 1200]
+    gamma: 1
+
+  total_iter: 24800 #
   warmup_iter: -1  # no warm up
-  
+
   # losses
   mos_loss_opt:
-    type: MSELoss 
-    loss_weight: !!float 1.0
-
-  metric_loss_opt:
-    type: NiNLoss 
+    type: PLCCLoss
     loss_weight: !!float 1.0
 
 # validation settings
 val:
-  val_freq: !!float 800 
+  val_freq: !!float 100
   save_img: false
   pbar: true
 
-  key_metric: srcc # if this metric improve, update all metrics. If not specified, each best metric results will be updated separately 
+  key_metric: srcc # if this metric improve, update all metrics. If not specified, each best metric results will be updated separately
   metrics:
-    srcc: 
+    srcc:
       type: calculate_srcc
 
-    plcc: 
+    plcc:
       type: calculate_plcc
+
+    krcc:
+      type: calculate_krcc
 
 # logging settings
 logger:
-  print_freq: 100
-  save_latest_freq: !!float 500 
-  log_imgs_freq: 1000
+  print_freq: 20
+  save_checkpoint_freq: !!float 5e9
+  save_latest_freq: !!float 5e2
   use_tb_logger: true
   wandb:
     project: ~
@@ -115,5 +102,3 @@ logger:
 dist_params:
   backend: nccl
   port: 29500
-
-find_unused_parameters: True
