--- a/options/train/train_laion_aes_ava.yml
+++ b/options/train/train_laion_aes_ava.yml
@@ -1,6 +1,6 @@
 name: 001_laion_aes_ava
 # name: debug_model
-model_type: GeneralIQAModel 
+model_type: GeneralIQAModel #waferIQAModel
 num_gpu: 1  # set num_gpu: 0 for cpu mode
 manual_seed: 123 
 
